--- a/deploy/smf/smf-deployment.yaml
+++ b/deploy/smf/smf-deployment.yaml
@@ -14,8 +14,6 @@ spec:
     metadata:
       labels:
         app: free5gc-smf
-      annotations:
-        cni.projectcalico.org/ipAddrs: "[\"192.168.0.3\"]"
     spec:
       containers:
       - name: free5gc-smf
@@ -41,7 +39,7 @@ spec:
       - name: init-network-client
         image: sdnvortex/network-controller:v0.4.9
         command: ["/go/bin/client"]
-        args: ["-s=unix:///tmp/vortex.sock", "-b=br0", "-n=eth1", "-i=192.188.2.4/24"]
+        args: ["-s=unix:///tmp/vortex.sock", "-b=br0", "-n=eth1", "-i=192.188.2.3/24"]
         env:
         - name: POD_NAME
           valueFrom:
@@ -58,20 +56,16 @@ spec:
         volumeMounts:
         - mountPath: /tmp/
           name: grpc-sock
-      securityContext:
-        sysctls:
-        - name: net.ipv6.conf.all.disable_ipv6
-          value: "0"
       volumes:
       - name: grpc-sock
         hostPath:
           path: /tmp/vortex/
       - name: config-volume
         configMap:
-          name: smf-config
+          name: free5gc-config
           items:
           - key: config.file
-            path: smf.conf
+            path: free5gc.conf
       - name: freediameter-volume
         configMap:
           name: freediameter-smf-config
