--- a/deploy/webui/webui-service.yaml
+++ b/deploy/webui/webui-service.yaml
@@ -2,11 +2,12 @@ kind: Service
 apiVersion: v1
 metadata:
   name: free5gc-webui-service
+  namespace: free5gc
 spec:
   selector:
     app: free5gc-webui
   ports:
   - protocol: TCP
     port: 3000
-    nodePort: 3000
+    nodePort: 31111
   type: NodePort
