--- a/deploy/mongodb/mongodb-deployment.yaml
+++ b/deploy/mongodb/mongodb-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         name: free5gc-mongo
         ports:
         - containerPort: 27017
-          name: mongo
+          name: free5gc-mongo
         volumeMounts:
         - name: mongo-persistent-storage
           mountPath: /data/db
