--- a/deploy/mongodb/mongodb-pvc.yaml
+++ b/deploy/mongodb/mongodb-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pv-claim
+  namespace: free5gc
 spec:
   accessModes:
     - ReadWriteOnce
