--- a/deploy/mongodb/mongodb-service.yaml
+++ b/deploy/mongodb/mongodb-service.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-svc
+  namespace: free5gc
 spec:
   ports:
   - port: 27017
   selector:
-    app: mongo
+    app: free5gc-mongo
   clusterIP: None
