--- a/deploy/amf-deployment.yaml
+++ b/deploy/amf-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       - name: free5gc-amf
         image: tw0927041027/free5gc-base:latest
         imagePullPolicy: Always
-        command: ["/bin/bash"]
+        command: ["/bin/sh"]
         args: ["-c", "/root/free5gc/install/bin/free5gc-amfd"]
         env:
         - name: DB_URI
